# Puglar

./: .env.example  .gitattributes  .gitignore  ASSET_MANIFEST.md  BO6_MAPS.md  BUILD_DEBUG_REPORT.md  CATALOG.md  Cargo.toml  FEATURE_ITERATIONS.md  GAME_PACKAGE_PLAN.md  GTA6_VR_Realism_400_Iterations.md  GTA_ENHANCEMENT_PACKAGES.md  LICENSE  MAJOR_RELEASE_PATCHES.md  MOD_MENU.md  Makefile  PROJECT_TASKS.md  README.md  RELEASE_CHECKSUMS.sha256  RELEASE_NOTES.md  app.js  audio_tools.py  build_catalog.py  catalog.json  combat_simulator.py  deepseek_agents.py  firebase-hosting-predeploy-checklist.md  gta6_iteration_sim.py  index.html  manifest.webmanifest  meta-quest-hand-tracking.config.json  meta-quest-hand-tracking.schema.json  package.json  pyproject.toml  script.js  server_status_gui.py  service-worker.js  studio_simulator.py  styles.css  sw.js  (+5 more)
app/: app.js  index.html  styles.css
assets/: README.md
catalog/: manifest.json
combat_studio/: __init__.py  github_client.py  models.py  pipeline.py  runpod_client.py  simulator.py  synthetic_data.py
data/: bo6_maps_scraped_index.json  gta6_vehicles.json  gta6_weapons.json  gta6_weapons.md  simulator_logic_graphics_scrape.json
design/: graphics_quality_playbook.md  mw2_promomod_prompt_pack.json
docs/: 01-product-vision.md  02-technical-architecture-baseline.md  3gs_engine_blueprint.md  ASSET_INVENTORY.md  FILE_INDEX.md  METAVERSE_ENGINE_BLUEPRINT.md  ROADMAP.md  gta6_vr_metaverse_expansion_blueprint.md  prisma-iteration-log.md  simulator_mod_expansion.md  vr-metaverse-gap-analysis-and-initial-execution.md  (+2 more)
(+97 files in other folders)
