[project]
name = "combat-studio"
version = "0.1.0"
description = "Simulation-level combat studio with synthetic scenarios and RunPod/GitHub integrations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
